# ropresence

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: gen-icon.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs  tray.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/discord/: mod.rs  reconnect.rs  rpc.rs
src-tauri/src/presence/: builder.rs  mod.rs  variables.rs
src-tauri/src/roblox/: api.rs  log_parser.rs  mod.rs  process_watch.rs
src/components/: DiscordConnectBanner.tsx  DiscordPreview.tsx  FeatureToggle.tsx  Field.tsx  GlassPanel.tsx  SessionStats.tsx  Sidebar.tsx  StatusBar.tsx  Toggle.tsx
src/i18n/: en.json  fr.json  index.ts
src/lib/: defaults.ts  presets.ts  tauri.ts
src/pages/: Buttons.tsx  Presence.tsx  Profiles.tsx  Roblox.tsx  Settings.tsx  Setup.tsx
src/store/: useAppStore.ts
src/styles/: global.css  theme.css
src/types/: index.ts
